Fix Login page layout. #184 [ci skip] - Add forms isolate scss file; - Create new form layout stack (form, input-container classes); - Fix vertical align login container; - Change login page background; - Add some additional colors; - Fix html elements box sizing reset; - Fix webkit input autofill style.

--- a/app/scripts/pages/Login/login.scss
+++ b/app/scripts/pages/Login/login.scss
@@ -1,8 +1,14 @@
 .bg-reboo {
-  background-image: url("./../scripts/pages/Login/reboo-bg-login.png");
+  background-image: url('./../scripts/pages/Login/reboo-bg-login.png');
   color: $darkGray;
 
   h1 {
     font-weight: normal;
+  }
+
+  .form {
+    input[type="submit"] {
+      font-size: 1.15rem;
+    }
   }
 }
